--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,20 @@
 server:
   port: 8000
-
-spring:
-  h2:
-    console:
+  servlet:
+    encoding:
+      charset: UTF-8
       enabled: true
-      path: /h2~console
+      force: true
+spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/opgg
-    username: sa
-    password: 1234
-    driver-class-name: org.h2.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url:
+    username:
+    password:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
         show_sql: true
         format_sql: true
