--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,10 @@ dependencies {
     //MYSQL
     implementation 'mysql:mysql-connector-java'
 
+    // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
+    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.0.8'
+
+
     //IOUtil
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 
