--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     //querydsl 추가
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
     annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"
+    // https://mvnrepository.com/artifact/com.querydsl/querydsl-sql
+    implementation 'com.querydsl:querydsl-sql:5.0.0'
 
     //jwt 토큰 추가 ============================================================
     // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
