--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,6 @@ dependencies {
     // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.0.8'
 
-
     //IOUtil
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 
@@ -77,6 +76,9 @@ dependencies {
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 
     //jwt 토큰 추가 끝===========================================================
+
+    // webclient
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 }
 
 test {
