--- a/src/main/resources/docker/backend/docker-compose.yml
+++ b/src/main/resources/docker/backend/docker-compose.yml
@@ -1,12 +1,10 @@
 version: '3.7'
 services:
-  app:
-    container_name: spring-app
-    image: openjdk:11-jdk
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./app:/app
-    working_dir: /app
-    command: ["./gradlew", "bootrun"]
+  webapp:
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: always
+    ports:
+      - 8000:8000
+    container_name: opgg
