--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,15 +38,15 @@ jobs:
       - name: web docker build and push
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker build -t ${{ secrets.DOCKER_REPO }}/second-eyes-web .
-          docker push ${{ secrets.DOCKER_REPO }}/second-eyes-web
+          docker build -t ${{ secrets.DOCKER_REPO }}/opgg .
+          docker push ${{ secrets.DOCKER_REPO }}/opgg
 
       ## docker compose up
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
-          username: ubuntu
+          username: root
           key: ${{ secrets.KEY }}
           script: |
             sudo docker rm -f $(docker ps -qa)
