--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,6 @@ jobs:
           key: ${{ secrets.KEY }}
           script: |
             sudo docker rm -f $(docker ps -qa)
-            sudo docker pull ${{ secrets.DOCKER_REPO }}/second-eyes-web
-            sudo docker pull ${{ secrets.DOCKER_REPO }}/second-eyes-nginx
+            sudo docker pull ${{ secrets.DOCKER_REPO }}/opgg
             docker-compose up -d
             docker image prune -f
