docker networks 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,10 @@ services:
     image: akm4545/opgg
     restart: always
     ports:
-      - 8000:8000
+      - "8000:8000"
     container_name: opgg
+    networks:
+      - opgg-network
+networks:
+  opgg-network:
+    external: true
