--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,3 +74,4 @@ jobs:
             cd opgg_api/
             docker-compose up -d
             docker image prune -f
+            echo "${{ secrets.DATABASE }}" >> ./application.yml
